# advent-of-code

./: .gitignore  README.md  pyproject.toml
2025/01/: main.py
2025/02/: main.py
2025/03/: main.py
2025/04/: main.py
2025/05/: main.py
2025/06/: main.py
2025/07/: main.py
2025/08/: main.py
2025/09/: main.py
2025/10/: main.py
2025/11/: main.py
2025/12/: main.py
days/: __init__.py
days/day01/: __init__.py  main.py
days/day02/: __init__.py  main.py
libs/: __init__.py
libs/common/: __init__.py  io.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py
tests/2025/: test_01.py  test_02.py  test_03.py  test_04.py  test_07.py  test_08.py  test_11.py  test_12.py  test_day05.py  test_day06.py  test_day09.py  test_day10.py
utils/: __init__.py  io.py
