[project]
name = "advent-of-code"
version = "1.0.0"
description = "Multi-year Advent of Code solutions with Python and uv"
readme = "README.md"
authors = [{ name = "Malte Mindedal" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.6.0",
    "black>=24.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["2025", "utils", "tests"]
extend-select = ["I"]

[tool.black]
line-length = 100
target-version = ["py311"]
